Se agregan mapquest

--- a/emergenciAPPS/.classpath
+++ b/emergenciAPPS/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="D:/Universidad/2014-1/Disp. Moviles/mapquest-android-sdk/mapquest-android-sdk-1.0.5.jar"/>
+	<classpathentry kind="lib" path="libs/mapquest-android-sdk-1.0.5.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
