--- a/emergenciAPPS/AndroidManifest.xml
+++ b/emergenciAPPS/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppThemeDark" >
         <activity
-            android:name="com.example.login.loginActivity"
+            android:name="com.example.login.LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,12 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-         <activity android:name="com.example.emergenciapps.EmergenciaAPPSActivity"></activity>
+         <activity android:name="com.example.emergenciapps.EmergenciAPPSActivity"></activity>
     </application>
     
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     
+    <supports-screens android:anyDensity="true"/>
 
 </manifest>
