Se ha creado el listar contactos y detalle contacto

--- a/emergenciAPPS/AndroidManifest.xml
+++ b/emergenciAPPS/AndroidManifest.xml
@@ -24,6 +24,7 @@
         </activity>
          <activity android:name="com.example.emergenciapps.EmergenciAPPSActivity"></activity>
          <activity android:name="com.example.contactos.ListaContactosActivity"></activity>
+         <activity android:name="com.example.contactos.DetalleContacto"></activity>
          
     </application>
     
