--- a/emergenciAPPS/AndroidManifest.xml
+++ b/emergenciAPPS/AndroidManifest.xml
@@ -44,6 +44,17 @@
 		</activity>
 		<meta-data android:name="com.google.android.gms.version"
            android:value="@integer/google_play_services_version" />
+		
+		<receiver
+         android:name="com.example.login.GCMBroadcastReceiver"
+         android:permission="com.google.android.c2dm.permission.SEND" >
+         <intent-filter>
+              <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+              <category android:name="com.example.login" />
+         </intent-filter>
+     </receiver>
+ 
+     <service android:name=".GCMIntentService" />
     </application>
     
     <uses-permission android:name="android.permission.INTERNET" />
