--- a/emergenciAPPS/AndroidManifest.xml
+++ b/emergenciAPPS/AndroidManifest.xml
@@ -54,7 +54,7 @@
          </intent-filter>
      </receiver>
  
-     <service android:name=".GCMIntentService" />
+     <service android:name="com.example.login.GCMIntentService" />
     </application>
     
     <uses-permission android:name="android.permission.INTERNET" />
