--- a/emergenciAPPS/AndroidManifest.xml
+++ b/emergenciAPPS/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:minSdkVersion="15"
         android:targetSdkVersion="17" />
 	<uses-permission android:name="android.permission.CALL_PHONE" /> 
+	<uses-permission android:name="android.permission.SEND_SMS" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
