se le agrega funcion volver atrás a seguimiento activity

--- a/emergenciAPPS/AndroidManifest.xml
+++ b/emergenciAPPS/AndroidManifest.xml
@@ -35,7 +35,7 @@
          </activity>
          
           <activity android:name="com.example.seguimiento.SeguimientoActivity"
-             
+             android:label="@string/seguimiento"
              android:screenOrientation="portrait">
          </activity>
        
