--- a/emergenciAPPS/AndroidManifest.xml
+++ b/emergenciAPPS/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="17" />
 	<uses-permission android:name="android.permission.CALL_PHONE" /> 
 	<uses-permission android:name="android.permission.SEND_SMS" />
+	<uses-permission android:name="android.permission.VIBRATE"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
